<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mycard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/business_name"
            android:textSize="24sp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/picture"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        <ImageView
            style="@style/Style3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"/>

        <TextView
            style="@style/Style2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                style="@style/Style3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email"/>

            <TextView
                style="@style/Style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                style="@style/Style3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/address"/>

            <TextView
                style="@style/Style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                style="@style/Style3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/description"/>

            <TextView
                style="@style/Style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                style="@style/Style3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hours"/>

            <TextView
                style="@style/Style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>